--- a/css/add_admin.css
+++ b/css/add_admin.css
@@ -53,7 +53,7 @@ body {
   border: none;
   background-color: #f0f1f3;
   margin: 10px 0px 15px 0px;
-  padding: 15px;
+  padding: 15;
 }
 .add_admin .add_new_add_admin .row1 .row1_inner2 input {
   width: 100%;
