--- a/css/exam.css
+++ b/css/exam.css
@@ -17,7 +17,7 @@ body {
   margin: 0px 10px;
 }
 .exam .exam_location .all_exam_para {
-  color: yellowgreen;
+  color: rgb(60, 60, 169);
 }
 .exam .add_new_exam {
   width: 100%;
@@ -86,15 +86,6 @@ body {
   width: 49%;
 }
 
-/* .exam .add_new_exam .row1 .row1_inner1 input {
-  width: 100%;
-  outline: none;
-  box-shadow: none;
-  border: none;
-  background-color: #f0f1f3;
-  margin: 10px 0px 15px 0px;
-  padding: 15px;
-} */
 .exam .add_new_exam .row2 .row2_inner1 select {
   width: 100%;
   outline: none;
@@ -154,26 +145,7 @@ body {
   margin: 10px 0px 15px 0px;
   padding: 15px;
 }
-/* .exam .add_new_exam .row2 .row2_inner1 select {
-    width: 100%;
-    outline: none;
-    cursor: pointer;
-    box-shadow: none;
-    border: none;
-    background-color: #f0f1f3;
-    margin: 10px 0px 15px 0px;
-    padding: 15px;
-  }
-  .exam .add_new_exam .row2 .row2_inner2 select {
-    width: 100%;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    box-shadow: none;
-    background-color: #f0f1f3;
-    margin: 10px 0px 15px 0px;
-    padding: 15px;
-  } */
+
 .exam .add_new_exam .e_save_btn {
   padding: 10px 25px;
   width: 200px;
@@ -181,8 +153,8 @@ body {
   color: #fff;
   font-size: 25px;
   font-weight: 550;
-  background-color: yellowgreen;
-  border: 1px solid yellowgreen;
+  background-color: rgb(60, 60, 169);
+  border: 1px solid rgb(60, 60, 169);
 }
 .exam .add_new_exam .e_save_btn:hover {
   background-color: transparent;
@@ -208,7 +180,7 @@ body {
   font-size: 15px;
 }
 .exam .all_exam_schedule .header_exam_schedule_table button {
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
   border: none;
   padding: 5px 15px;
@@ -230,7 +202,7 @@ body {
 #exam_table th {
   padding: 15px;
   border: 1px solid #ddd;
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
 }
 #exam_table td {
@@ -275,15 +247,15 @@ span.page-link {
   transition: 0.5s;
   color: #000;
   cursor: pointer;
-  border: 1px solid yellowgreen;
+  border: 1px solid rgb(60, 60, 169);
   margin: 0px 5px;
 }
 #showExamData ul.pagination li:hover {
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
 }
 #showExamData ul.pagination li.active {
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
 }
 #showExamData ul.pagination li.active:hover {
