--- a/css/expenses.css
+++ b/css/expenses.css
@@ -11,7 +11,7 @@ body {
   margin: 15px 0px;
   display: flex;
   align-items: center;
-  color: rgb(90, 90, 90);
+  color: rgb(60, 60, 169);
 }
 .expenses .expenses_location .fa-chevron-right {
   margin: 0px 10px;
@@ -86,15 +86,6 @@ body {
   width: 49%;
 }
 
-/* .expenses .add_new_expenses .row1 .row1_inner1 input {
-      width: 100%;
-      outline: none;
-      box-shadow: none;
-      border: none;
-      background-color: #f0f1f3;
-      margin: 10px 0px 15px 0px;
-      padding: 15px;
-    } */
 .expenses .add_new_expenses .row2 .row2_inner1 input {
   width: 100%;
   outline: none;
@@ -192,27 +183,7 @@ body {
   margin: 10px 0px 15px 0px;
   padding: 15px;
 }
-/* .transport .add_new_exam .row2 .row2_inner1 select {
-        width: 100%;
-        outline: none;
-        cursor: pointer;
-        box-shadow: none;
-        border: none;
-        background-color: #f0f1f3;
-        margin: 10px 0px 15px 0px;
-        padding: 15px;
-      }
-      
-      .exam .add_new_exam .row2 .row2_inner2 select {
-        width: 100%;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        box-shadow: none;
-        background-color: #f0f1f3;
-        margin: 10px 0px 15px 0px;
-        padding: 15px;
-      } */
+
 .expenses .add_new_expenses .ex_save_btn {
   padding: 10px 25px;
   width: 200px;
@@ -220,8 +191,8 @@ body {
   color: #fff;
   font-size: 25px;
   font-weight: 550;
-  background-color: yellowgreen;
-  border: 1px solid yellowgreen;
+  background-color: rgb(60, 60, 169);
+  border: 1px solid rgb(60, 60, 169);
 }
 .expenses .add_new_expenses .ex_save_btn:hover {
   background-color: transparent;
@@ -247,7 +218,7 @@ body {
   font-size: 15px;
 }
 .expenses .all_expenses_schedule .header_expenses_schedule_table button {
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
   border: none;
   padding: 5px 15px;
@@ -266,7 +237,7 @@ body {
 #expenses_table th {
   padding: 15px;
   border: 1px solid #ddd;
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
 }
 #expenses_table td {
@@ -314,15 +285,15 @@ span.ex_page-item {
   transition: 0.5s;
   color: #000;
   cursor: pointer;
-  border: 1px solid yellowgreen;
+  border: 1px solid rgb(60, 60, 169);
   margin: 0px 5px;
 }
 #showExpensesData ul.pagination li:hover {
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
 }
 #showExpensesData ul.pagination li.active {
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
 }
 #showExpensesData ul.pagination li.active:hover {
