--- a/css/notice.css
+++ b/css/notice.css
@@ -17,7 +17,7 @@ body {
   margin: 0px 10px;
 }
 .notices .notice_location .all_notice_para {
-  color: yellowgreen;
+  color: rgb(60, 60, 169);
 }
 .notices .add_new_notice {
   width: 100%;
@@ -66,16 +66,7 @@ body {
   margin: 10px 0px 15px 0px;
   padding: 15px;
 }
-/* .notices .add_new_notice .row1 .row1_inner2 select {
-  width: 100%;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  box-shadow: none;
-  background-color: #f0f1f3;
-  margin: 10px 0px 15px 0px;
-  padding: 15px;
-} */
+
 /* for row two============================= */
 .notices .add_new_notice .row2 {
   margin-top: 25px;
@@ -138,21 +129,21 @@ body {
   padding: 15px 25px;
 }
 .notices .add_new_notice #n_save_btn {
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
-  border: 1px solid yellowgreen;
+  border: 1px solid rgb(60, 60, 169);
 }
 .notices .add_new_notice #n_save_btn:hover {
   background-color: transparent;
   color: #000;
 }
 .notices .add_new_notice #n_reset_btn {
-  border: 1px solid yellowgreen;
+  border: 1px solid rgb(60, 60, 169);
   color: #000;
   background-color: transparent;
 }
 .notices .add_new_notice #n_reset_btn:hover {
-  background-color: yellowgreen;
+  background-color: rgb(60, 60, 169);
   color: #fff;
 }
 /* notice data here ======================================== */
@@ -191,7 +182,7 @@ body {
   cursor: pointer;
 }
 .notices .show_notice_data .posted_notice h1 {
-  background-color: yellowgreen;
+  background-color:rgb(60, 60, 169);
   border-radius: 15px;
   padding: 10px 25px;
   color: #fff;
